# polymarket

./: .gitignore  ARCHITECTURE.md  CLIENT_MVP_PRESENTATION.md  DEPLOYMENT.md  Dockerfile  MCP_CONFIG_EXAMPLE.toml  MVP_0_SCREENER.md  PROJECT_DOCS.md  STACK.md  agents.md
apps/screener/: .env.example  Procfile  README.md  pyproject.toml
apps/screener/src/screener/: __init__.py  config.py  cross_venue.py  detector.py  implications.py  kalshi.py  main.py  models.py  storage.py  telegram.py
apps/screener/src/screener/polymarket/: __init__.py  client.py
mcp/knowledge-mcp/: pyproject.toml  server.py
mcp/postgres-mcp/: pyproject.toml  server.py
mcp/redis-mcp/: pyproject.toml  server.py
roles/: main-builder.md  risk-ops.md  tester-reviewer.md
scripts/: build_client_mvp_pdf.py
skills/ledger-accounting/: SKILL.md
skills/polymarket-integration/: SKILL.md
skills/polymm-domain/: SKILL.md
skills/project-architecture/: SKILL.md
skills/telegram-mini-app/: SKILL.md
skills/trading-risk-runbook/: SKILL.md
