[project]
name = "cross-venue-screener"
version = "0.1.0"
description = "MVP-0 cross-venue prediction-market screener with Telegram alerts."
requires-python = ">=3.11"
dependencies = [
]

[project.scripts]
screener = "screener.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screener"]
